--- a/style.css
+++ b/style.css
@@ -11,10 +11,9 @@ header{
     padding: 20px 10px 10px 10px;    
     background-color: rgb(96, 162, 219);
     flex-direction: column;
-    transition: 300ms;
 }
 
-header:hover{
+button:hover{
     transform: scale(1,1.1);
 }
 
@@ -35,17 +34,21 @@ nav{
     gap: 10px;
 }
 
+button{
+        background-color: rgb(67, 148, 219);
+        border-radius: 10%;
+        border-color: rgb(46, 137, 218);
+        border-width: 2px;
+        border-style: solid;
+        padding: 3px 10px;
+        cursor: pointer;
+        width: 100px;
+        transition: 100ms;
+    }
+    
 li{
-    list-style: none;
     color: rgb(24, 70, 110);
+    list-style: none;
     font-weight: bold;
-    cursor: pointer;
-    background-color: rgb(67, 148, 219);
-    padding: 5px 10px;
-    width: 80px;
     margin: 5px;
-    border-radius: 10%;
-    border-color: rgb(46, 137, 218);
-    border-width: 2px;
-    border-style: solid;
 }
