--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ header{
     padding: 20px 10px 10px 10px;    
     background-color: rgb(96, 162, 219);
     flex-direction: column;
+    position: sticky;
+    top: 0;
+    z-index: 100;
 }
 
 button:hover{
@@ -37,8 +40,8 @@ button:hover{
 
 
 .tab-btn{
-        background-color: rgb(67, 148, 219);
-        border-radius: 10%;
+        background-color: rgb(56, 145, 223);
+        border-radius: 10px;
         border-color: rgb(46, 137, 218);
         border-width: 3px;
         border-style: solid;
@@ -66,7 +69,7 @@ button:hover{
 
 
     
-li{
+.tab-buttons li{
     list-style: none;
     font-weight: bold;
     margin: 5px;
@@ -82,3 +85,62 @@ li{
     display: flex;
 
 }
+
+.infos{
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    align-content: center;
+    flex-direction: column;
+    width: 100%;
+
+}
+
+/* JavaScript */
+
+#nav{
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    height: 100vh;
+    padding: 5px;
+    gap: 10px;
+    background-color: rgb(96, 162, 219);
+    box-shadow: 5px 0px 10px rgba(0, 0, 0, 0.6);
+    border: rgb(24, 70, 110) solid;
+    position: sticky;
+    top: 100px;
+    z-index: 1;
+}
+
+#nav li{
+    list-style: none;
+    text-decoration: none;
+    font-style: unset;
+    font-weight: bold;
+    margin: 5px;
+    padding: 5px;
+    background-color: rgb(56, 145, 223);
+    cursor: pointer;
+    border-radius: 5px;
+    transition: 40ms;
+}
+
+#nav li a{
+    text-decoration: none;
+    font-style: unset;
+    color: aliceblue;
+}
+
+
+#nav li:hover{
+    transform: scale(1.02, 1.1);
+}
+
+#nav li:active{
+    transform: scale(1.1);
+}
+
+/* main.tab-contents{
+    margin-top: 120px
+} */
