--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 html{
     scrollbar-color: rgb(56, 145, 223) rgb(222, 237, 250);
     scrollbar-width: thin;
+    overflow-y: hidden;
 }
 
 header{
@@ -17,7 +18,7 @@ header{
     flex-direction: column;
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 1000;
 }
 
 button.tab-btn:hover{
@@ -34,6 +35,12 @@ button.tab-btn:hover{
     font-family: verdana;
     font-weight: 900;
     margin-bottom: 35px;
+}
+
+main.tab-contents {
+    height: calc(100vh - 150px);
+    overflow-y: scroll;
+    scrollbar-width: thin;
 }
 
 .tab-buttons{
@@ -114,7 +121,7 @@ button.tab-btn:hover{
     box-shadow: 5px 0px 10px rgba(0, 0, 0, 0.6);
     border: rgb(24, 70, 110) solid;
     position: fixed;
-    z-index: 1000;
+    z-index: 999;
     top: 144px;
     overflow-y: hidden; 
     scrollbar-color: rgb(56, 145, 223) rgb(222, 237, 250);
@@ -191,7 +198,7 @@ button.tab-btn:hover{
 
 .nav-toggle.open {
 
-    transform: translateX(10rem); /* Move o botão para o lado direito da nav */
+    transform: translateX(9.2rem); /* Move o botão para o lado direito da nav */
     transition: 0.4s ease-in-out;
     background-color: #f44336; /* Cor de fundo para indicar que está fechando */
 }
