--- a/style.css
+++ b/style.css
@@ -21,20 +21,30 @@ header{
     z-index: 1000;
 }
 
+
+
 button.tab-btn:hover{
     transform: scale(1,1.1);
 }
 
 .titulo{
+    display: flex;
+    justify-content: flex-start;
     color: rgb(24, 70, 110);
     display: flex;
+    flex-direction: row-reverse;
+    gap: 30px;
     align-content: center;
-    justify-content: center;
     align-items: center;
     justify-items: center;
     font-family: verdana;
     font-weight: 900;
-    margin-bottom: 35px;
+    margin-bottom: 0px;
+}
+
+
+img{
+    width: 80px;
 }
 
 main.tab-contents {
