--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ main {
     overflow-y: scroll;
     scrollbar-width: thin;
 }
+code{
+    font-style: italic ;
+    font-family: Microsoft sans-serif;
+}
 
 
 /* Parte superior do título e ícone */
@@ -151,6 +155,15 @@ main {
     font-size: 18px;
     text-indent: 40px;
 }
+.infos #p-disabled{
+    font-size: 18px;
+    text-indent: 0px;
+}
+.p-relative{
+    position: relative;
+    line-height: 0;
+}
+
 .infos h2{
     font-size: 35px;
     margin-bottom: 10px;
